added returning full database object in request experiments
