# ExperimentsService/swagger_server/models/existing_correlation_experiment.py
@@ -15,7 +15,7 @@ class ExistingCorrelationExperiment(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, experiment_id: str=None, asset_1: str=None, asset_2: str=None, correlation: float=None):  # noqa: E501
+    def __init__(self, experiment_id: str=None, asset_1: str=None, asset_2: str=None, correlation: float=None, data: List[float]=None, type: str=None):  # noqa: E501
         """ExistingCorrelationExperiment - a model defined in Swagger
 
         :param experiment_id: The experiment_id of this ExistingCorrelationExperiment.  # noqa: E501
@@ -26,25 +26,35 @@ class ExistingCorrelationExperiment(Model):
         :type asset_2: str
         :param correlation: The correlation of this ExistingCorrelationExperiment.  # noqa: E501
         :type correlation: float
+        :param data: The data of this ExistingCorrelationExperiment.  # noqa: E501
+        :type data: List[float]
+        :param type: The type of this ExistingCorrelationExperiment.  # noqa: E501
+        :type type: str
         """
         self.swagger_types = {
             'experiment_id': str,
             'asset_1': str,
             'asset_2': str,
-            'correlation': float
+            'correlation': float,
+            'data': List[float],
+            'type': str
         }
 
         self.attribute_map = {
             'experiment_id': 'experiment_id',
             'asset_1': 'asset_1',
             'asset_2': 'asset_2',
-            'correlation': 'correlation'
+            'correlation': 'correlation',
+            'data': 'data',
+            'type': 'type'
         }
 
         self._experiment_id = experiment_id
         self._asset_1 = asset_1
         self._asset_2 = asset_2
         self._correlation = correlation
+        self._data = data
+        self._type = type
 
     @classmethod
     def from_dict(cls, dikt) -> 'ExistingCorrelationExperiment':
@@ -148,3 +158,51 @@ class ExistingCorrelationExperiment(Model):
             raise ValueError("Invalid value for `correlation`, must not be `None`")  # noqa: E501
 
         self._correlation = correlation
+
+    @property
+    def data(self) -> List[float]:
+        """Gets the data of this ExistingCorrelationExperiment.
+
+
+        :return: The data of this ExistingCorrelationExperiment.
+        :rtype: List[float]
+        """
+        return self._data
+
+    @data.setter
+    def data(self, data: List[float]):
+        """Sets the data of this ExistingCorrelationExperiment.
+
+
+        :param data: The data of this ExistingCorrelationExperiment.
+        :type data: List[float]
+        """
+
+        self._data = data
+
+    @property
+    def type(self) -> str:
+        """Gets the type of this ExistingCorrelationExperiment.
+
+
+        :return: The type of this ExistingCorrelationExperiment.
+        :rtype: str
+        """
+        return self._type
+
+    @type.setter
+    def type(self, type: str):
+        """Sets the type of this ExistingCorrelationExperiment.
+
+
+        :param type: The type of this ExistingCorrelationExperiment.
+        :type type: str
+        """
+        allowed_values = ["stock", "forex"]  # noqa: E501
+        if type not in allowed_values:
+            raise ValueError(
+                "Invalid value for `type` ({0}), must be one of {1}"
+                .format(type, allowed_values)
+            )
+
+        self._type = type
